[gd_scene load_steps=3 format=3 uid="uid://cqgjpsea4nr4x"]

[ext_resource type="Script" uid="uid://chxlr76vws2ao" path="res://menu/menu.gd" id="1_j0t7f"]
[ext_resource type="Texture2D" uid="uid://dl7wl21glfjq1" path="res://graphics/Menu_1.png" id="2_g18jx"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0t7f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g18jx")
expand_mode = 2

[node name="Credits" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 2
offset_left = 662.0
offset_top = 317.0
offset_right = 1037.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 69
text = "Cr√©dits"

[node name="Quitter" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 2
offset_left = 640.0
offset_top = 452.0
offset_right = 1037.0
offset_bottom = 555.0
theme_override_font_sizes/font_size = 69
text = "Quitter"

[node name="Start" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 2
offset_left = 661.0
offset_top = 184.0
offset_right = 1032.0
offset_bottom = 287.0
theme_override_font_sizes/font_size = 69
text = "Allons-y !"

[connection signal="button_down" from="Credits" to="." method="_on_button_credits"]
[connection signal="button_down" from="Quitter" to="." method="_on_button_quit"]
[connection signal="button_down" from="Start" to="." method="_on_button_start"]
